Changes for 2.0.13rc1

New features:
A.F....... [ZBX-1357] updated Slovak translation; thanks to Zabbix translators (Richlv)

Bug fixes:
.......PS. [ZBX-7576] when pinging a broadcast address ignore responses from other addresses (wiper)
...G...... [ZBX-6531] fixed memory leak in filesystem discovery on AIX systems (Juris)
..F....... [ZBX-8241] fixed duplicate display of actions in media type list (Andrejs)
...G...... [ZBX-8269] fixed processing of active checks in agent (Andris)
...G...... [ZBX-8238] fixed updating agent 'mtime' for logrt[] items; thanks to Yoshinori Komuro for patch (Andris)
...G...PS. [ZBX-7098] improved handling of log file rotation/truncation for logrt[] and log[] items (Andris)
...G...... [ZBX-8198] decreased verbosity of Windows agent with DebugLevel=4 (Nikolaj)
...G...... [ZBX-7875] fixed wrongly reported system version for Windows 8.1 and Server 2012 R2 (Nikolaj, wiper)

--------------------------------------------------------------------------------
Changes for 2.0.12

2.0.12rc3 was released as 2.0.12 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.12rc3

Bug fixes:
........S. [ZBX-8181] fixed possible entering of "history syncer" process in an eternal loop when processing IT services (dimir)

--------------------------------------------------------------------------------
Changes for 2.0.12rc2

Bug fixes:
...G...... [ZBX-7856] fixed zbx_stat() not working with directories in Windows (wiper)

--------------------------------------------------------------------------------
Changes for 2.0.12rc1

New features:
.......... [ZBX-7811] added example robots.txt file (Richlv)
....IJ.... [ZBXNEXT-1889] made startup.sh and shutdown.sh scripts for Java gateway work in /bin/sh (asaveljevs)
.D........ [ZBX-7597] added description of the returned value types to the agentd manpage (Richlv)